--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,3 +42,9 @@ spring:
       #trigger-file: .trigger-file #该文件修改才会重启
   cache:
     cache-names: c1
+#  security:
+#    user:
+#      password: 123456
+#      name: meteor
+#      roles: admin
+
