--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,11 +54,6 @@ spring:
           socketFactory:
             class: javax.net.ssl.SSLSocketFactory
         debug: true
-#  security:
-#    user:
-#      password: 123456
-#      name: meteor
-#      roles: admin
 
 management:
   endpoint:
@@ -82,3 +77,5 @@ info:
   author:
     name: meteor
     address: www.smartdog.top
+server:
+  port: 8081
