--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.wxy</groupId>
     <artifactId>sams</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>sams</name>
     <description>Demo project for Spring Boot</description>
 
@@ -120,6 +121,12 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-tomcat</artifactId>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>mysql</groupId>
