--- a/samsServer/samsService/pom.xml
+++ b/samsServer/samsService/pom.xml
@@ -23,5 +23,11 @@
             <artifactId>poi</artifactId>
             <version>4.1.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.1.7.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
