--- a/mailServer/src/main/resources/application.properties
+++ b/mailServer/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.mail.password=mjeqregqbjmidhja
 spring.mail.username=2290502632@qq.com
 spring.mail.port=465
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.debug=false
 
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
